Fix vertical alignement between label and checkbox

--- a/app/webroot/css/layouts/default.css
+++ b/app/webroot/css/layouts/default.css
@@ -44,6 +44,10 @@ textarea {
     border: 1px solid #ddd;
 }
 
+label, input[type="checkbox"] {
+    vertical-align: middle;
+}
+
 a img {
     border: none;
 }
