--- a/app/webroot/css/users/register.css
+++ b/app/webroot/css/users/register.css
@@ -34,7 +34,6 @@
 }
 
 #UserRegisterForm .field {
-    padding-top: 15px;        
     text-align: right;
 }    
 
